fixed sticky footer overlapping content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,8 @@ body{
 footer {
     color: white;
     text-align: center;
+    margin-top: 400px;
+
 }
 
 form {
@@ -54,16 +56,7 @@ form {
 
   .portfolio {
     position: relative;
-
-
-    
-}
-
-
-
-
-
-
+   }
 
   .label {
     text-align: center;
@@ -77,7 +70,6 @@ form {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
     line-height: 30px;
-
   }
 
   .portimg {
@@ -85,3 +77,7 @@ form {
       height: 100%;
       padding: 8%;
   }
+
+.container {
+    margin-bottom: 80px;
+}
